--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -12,6 +12,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go-version }}
+    - name: Install Hugo
+      run: sudo apt-get install hugo
     - name: Checkout code
       uses: actions/checkout@v2
       with:
