--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://jacoblincool.github.io/leetcode-blog/"
 languageCode = "zh-tw"
 DefaultContentLanguage = "zh-tw"
 title = "Leetcode Story"
