--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
     - name: Hugo Build
-      run: hugo --minify
+      run: env HUGO_ENV="production" hugo --minify
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3.7.3
       with:
