--- a/config.toml
+++ b/config.toml
@@ -44,3 +44,4 @@ hasCJKLanguage = true
   background_color_class = "bg-dark-gray"
   featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 3
+  custom_css = ["css/custom.css"]
