--- a/.github/workflows/cf-pages.yml
+++ b/.github/workflows/cf-pages.yml
@@ -1,8 +1,10 @@
-name: Hugo Build & Deploy CI
+name: Cloudflare Pages Deploy CI
+
 on:
-  push:
   schedule:
-    - cron: "0 4,10,16,22 * * *"
+    - cron: "0 */2 * * *"
+  workflow_dispatch:
+
 jobs:
   build_and_deploy:
     name: Build & Deploy
@@ -16,11 +18,12 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
       - name: Hugo Build
-        run: env HUGO_ENV="production" hugo --minify
+        run: env HUGO_ENV="production" hugo -e production --minify
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3.7.3
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           publish_dir: "./public"
           user_name: "JacobLinCool"
           user_email: "jacoblincool@users.noreply.github.com"
+          publish_branch: "cf-pages"
